Photos can be liked and commented on, but need some more fixes

--- a/src/style.css
+++ b/src/style.css
@@ -106,9 +106,9 @@ body {
 .nav-link-underline:hover::after {
     transform: scaleX(1);
 }
-#nav-auth{
+/* #nav-auth{
 
-}
+} */
 
 /* ==========================================================================
    BUTTONS
